# test1

./: .env.example  .gitignore  ARCHITECTURE.md  BOT_WORKFLOW.md  CODE_CATALOG_FEATURE.md  DENSIFICATION_FEATURE.md  DEVELOPMENT.md  Dockerfile  FEATURE_SUMMARY.md  GEOMETRY_ENGINE.md  GEOMETRY_ENGINE_SUMMARY.md  GIT_CHANGES_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  Makefile  PROJECT_SCAFFOLD_SUMMARY.md  QUICKSTART.md  README.md  SCAFFOLD_CHECKLIST.md  TASK_COMPLETION_SUMMARY.md  TIN_FEATURE_SUMMARY.md  bot_main.py  cli.py  docker-compose.yaml  pyproject.toml  pytest.ini  setup.py  test_acceptance.py  test_structure.py  verify_feature.py  verify_scaffold.py
docs/: README.md  code_catalog.md  densification.md  deployment.md  developer-guide.md  installation.md  monetization.md  overview.md  tin_surface_builder.md  user-guide.md
examples/: README.md  bot_demo.py  catalog_example.py  demo_densification.py  demo_geometry_engine.py  demo_tin_builder.py  process_sample_file.py  sample_coordinates.txt  sample_coordinates.xyz  sample_survey_data.txt
screenshots/: README.md
src/bot/: conversation.py  file_parser.py  states.py
src/cad_p/: __main__.py  bot.py  config.py  dependencies.py  logging_config.py
src/cad_p/bot/: handlers.py
src/cad_p/dxf/: geometry_helpers.py  layer_manager.py  scale_settings.py
src/cad_p/models/: bot_data.py  point_data.py  settings.py
src/cad_p/services/: catalog_workflow.py  tin_service.py
src/catalog/: __init__.py  code_catalog.py
src/dxf/: __init__.py  exporter.py  generation_service.py  layer_manager.py  polyline_builder.py
src/models/: point_data.py  rule_data.py  settings.py
src/processors/: point_cloud.py  tin_builder.py
src/services/: densification_service.py  processing_service.py  rule_engine.py
tests/: test_bot_parser.py  test_bot_states.py  test_catalog_workflow.py  test_code_catalog.py  test_densification.py  test_dxf_generation.py  test_integration.py  test_layer_assignment.py  test_rule_engine.py  test_tin_builder.py  test_tin_integration.py
